# Projeto-CRUD

./: README.md  docker-compose.yml  pyproject.toml
backend/: database.py  models.py
frontend/: app.py  pyproject.toml
