[project]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = [
    {name = "Nathan Vinicius",email = "limavinicius195@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "schemas (>=0.7.1,<0.8.0)",
    "fastapi (>=0.120.4,<0.121.0)",
    "crud (>=0.1,<0.2)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "schema (>=0.7.8,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
